# ChangeLog for app-editors/ne
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/app-editors/cvs-repo/gentoo-x86/app-editors/ne/ChangeLog,v 1.36 2010/05/21 16:53:11 swegener Exp $

*ne-2.1 (21 May 2010)

  21 May 2010; Sven Wegener <swegener@gentoo.org> +ne-2.1.ebuild:
  Version bump, bug #319213.

  01 Jan 2010; Christian Faulhammer <fauli@gentoo.org> ne-2.0.3.ebuild:
  Transfer Prefix keywords

*ne-2.0.3 (25 Mar 2009)

  25 Mar 2009; Sven Wegener <swegener@gentoo.org> +ne-2.0.3.ebuild:
  Version bump.

*ne-1.43 (07 Jun 2008)

  07 Jun 2008; Sven Wegener <swegener@gentoo.org> +ne-1.43.ebuild:
  Version bump.

  10 Oct 2007; Christian Faulhammer <opfer@gentoo.org> ne-1.42.ebuild:
  remove PROVIDE=virtual/editor as we have now a new-style virtual

  01 Mar 2007; <genstef@gentoo.org> ne-1.42.ebuild:
  Dropped ppc-macos keyword, see you in prefix

  18 Sep 2006; Sven Wegener <swegener@gentoo.org> -ne-1.39.ebuild,
  -ne-1.41.ebuild, ne-1.42.ebuild:
  Remove -O3 from makefile internal CFLAGS. Cleanup.

  18 Sep 2006; <ticho@gentoo.org> ne-1.42.ebuild:
  Stable on x86, bug #147936.

  18 Sep 2006; Brent Baude <ranger@gentoo.org> ne-1.42.ebuild:
  Marking ppc64 ne-1.42 ppc64 stable per bug 147936

  17 Sep 2006; <nixnut@gentoo.org> ne-1.42.ebuild:
  Stable on ppc wrt bug 147936

  17 Sep 2006; Thomas Cort <tcort@gentoo.org> ne-1.42.ebuild:
  Stable on amd64 wrt Bug #147936.

*ne-1.42 (05 Mar 2006)

  05 Mar 2006; Sven Wegener <swegener@gentoo.org> +ne-1.42.ebuild:
  Version bump.

  20 Sep 2005; Kito <kito@gentoo.org> ne-1.41.ebuild:
  ~ppc-macos. Closes Bug 106593

*ne-1.41 (17 Sep 2005)

  17 Sep 2005; Sven Wegener <swegener@gentoo.org> -ne-1.40.ebuild,
  +ne-1.41.ebuild:
  Version bump.

*ne-1.40 (27 Aug 2005)

  27 Aug 2005; Sven Wegener <swegener@gentoo.org> +ne-1.40.ebuild:
  Version bump.

  16 May 2005; Sven Wegener <swegener@gentoo.org> ne-1.39.ebuild:
  Added cross-compile support.
