@@ -1,6 +1,9 @@
 # ChangeLog for app-editors/ne
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-editors/cvs-repo/gentoo-x86/app-editors/ne/ChangeLog,v 1.36 2010/05/21 16:53:11 swegener Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-editors/cvs-repo/gentoo-x86/app-editors/ne/ChangeLog,v 1.37 2010/05/21 16:56:02 swegener Exp $
+
+  21 May 2010; Sven Wegener <swegener@gentoo.org> ne-2.0.3.ebuild:
+  Move sed to src_prepare.
 
 *ne-2.1 (21 May 2010)
 
